# pokerlab-assignment

./: README.md  services.proto
assignment-client/: README.md  analysis_options.yaml  pubspec.yaml
assignment-client/android/app/: build.gradle
assignment-client/android/app/src/main/: AndroidManifest.xml
assignment-client/android/app/src/main/kotlin/pokerlab/ca/assignment_client/: MainActivity.kt
assignment-client/ios/Runner/: Info.plist
assignment-client/ios/Runner.xcodeproj/: project.pbxproj
assignment-client/lib/: main.dart
assignment-client/lib/localization/: en_strings.dart  localization_extensions.dart
assignment-client/lib/ui/: app.dart  home_bloc.dart  home_state.dart  home_view.dart
assignment-client/lib/ui/base/: base_bloc.dart  base_view.dart
assignment-client/lib/ui/dialogs/: add_note_dialog.dart  delete_note_dialog.dart
assignment-client/lib/ui/elements/: todo_list_item.dart
assignment-server/: Cargo.toml  build.rs
assignment-server/src/: client.rs  main.rs
